fix overflow in horizontal axe for reasons_title

--- a/_src/assets/scss/components/_reasons-section.scss
+++ b/_src/assets/scss/components/_reasons-section.scss
@@ -6,6 +6,7 @@
 }
 
 .reasons_title {
+  display: inline-block;
   font-family: $font-title;
   text-transform: capitalize;
   font-size: 24px;
